syntax = "proto3";

option csharp_namespace = "Product.Grpc";

package Product;

service ProductService {
  rpc ReserveProduct (ReserveProductRequest) returns (ReserveProductResponse);
}

message ReserveProductRequest {
  string productId = 1;
  int32 quantity = 2;
}

message ReserveProductResponse {
  bool success = 1;
  string message = 2;
}